--- a/js/components/preloader/_preloader.scss
+++ b/js/components/preloader/_preloader.scss
@@ -31,7 +31,7 @@ body {
 
 
 
-@keyframes hatam {
+@keyframes overflow {
 	from {
 		font-size: 372px;
  	}
@@ -40,7 +40,7 @@ body {
 	}
 }
 
-@keyframes hatam {
+@keyframes overflow {
 	from {
         overflow: hidden;
     }
