--- a/index.scss
+++ b/index.scss
@@ -1,6 +1,17 @@
-@import './scss/mixins/classes';
-@import './js/components/preloader/preloader';
-@import './js/components/header/styles/header';
-@import './js/components/header/styles/burgerMenu';
+body {
+	margin: 0;
+}
 
-  
+::-webkit-scrollbar {
+	display: none;
+	opacity: 0;
+	visibility: hidden;
+}
+@import "./scss/base";
+@import "./scss/helpers/variables";
+@import "./scss/mixins/classes";
+@import "./scss/mixins/mixins";
+@import "./js/components/preloader/preloader";
+@import "./js/components/header/styles/header";
+@import "./js/components/header/styles/burgerMenu";
+@import "./js/components/footer/style";
