--- a/css/index.css
+++ b/css/index.css
@@ -19,21 +19,14 @@ body {
   top: 0;
   right: 0;
   bottom: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   z-index: 1;
   width: 100vw;
   height: 100vh;
   background-color: #fff;
-  -webkit-animation: 1s overlay 2.5s linear forwards;
-          animation: 1s overlay 2.5s linear forwards;
+  animation: 1s overlay 2.5s linear forwards;
 }
 
 .preloader h1 {
@@ -41,25 +34,11 @@ body {
   font-weight: 700;
   font-size: 72px;
   font-style: normal;
-  -webkit-animation: 1s fontSize 0s ease-in-out forwards;
-          animation: 1s fontSize 0s ease-in-out forwards;
+  animation: 1s fontSize 0s ease-in-out forwards;
 }
 
 .preloader span {
   color: red;
-}
-
-@-webkit-keyframes overlay {
-  from {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
-  to {
-    opacity: 0;
-    visibility: hidden;
-  }
 }
 
 @keyframes overlay {
@@ -72,15 +51,6 @@ body {
   to {
     opacity: 0;
     visibility: hidden;
-  }
-}
-
-@-webkit-keyframes fontSize {
-  from {
-    font-size: 372px;
-  }
-  to {
-    font-size: 72px;
   }
 }
 
@@ -118,15 +88,9 @@ body {
 }
 
 .header-bottom {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   min-height: 100px;
 }
 
@@ -141,7 +105,6 @@ body {
   width: 20px;
   height: 2px;
   background-color: #7b7b7b;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -150,20 +113,17 @@ body {
   position: absolute;
   height: inherit;
   background-color: inherit;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 .burger-menu span::before {
   width: 28px;
-  -webkit-transform: translateY(-5px);
-          transform: translateY(-5px);
+  transform: translateY(-5px);
 }
 
 .burger-menu span::after {
   width: 14px;
-  -webkit-transform: translateY(5px);
-          transform: translateY(5px);
+  transform: translateY(5px);
 }
 
 .burger-menu:hover span {
@@ -192,10 +152,8 @@ body {
 
 .footer__form {
   position: relative;
-  width: 700px;
-  margin: 40px auto 60px !important;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  width: 500px;
+  margin: auto;
   display: flex;
 }
 
@@ -217,13 +175,11 @@ body {
   height: 100%;
   background-color: #293341;
   z-index: 3;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 .footer__label.is-active::before {
-  -webkit-animation: wave 1s ease-in-out;
-          animation: wave 1s ease-in-out;
+  animation: wave 1s ease-in-out;
 }
 
 .footer__input {
@@ -235,8 +191,7 @@ body {
   z-index: 2;
   display: inline-block;
   padding: 20px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   outline: none;
   border: none;
   width: 100%;
@@ -248,14 +203,12 @@ body {
   font-size: 16px;
   font-style: normal;
   position: relative;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 20px 55px;
   margin-left: -1px;
   outline: none;
   border: none;
   background-color: #fff;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
   z-index: 1;
   cursor: pointer;
@@ -272,7 +225,6 @@ body {
   height: 100%;
   background-color: #293341;
   z-index: -1;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -284,42 +236,13 @@ body {
   width: 100%;
 }
 
-@-webkit-keyframes wave {
-  from {
-    width: 0%;
-  }
-  50% {
-    width: 100%;
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-  }
-  60% {
-    width: 100%;
-  }
-  70% {
-    width: 100%;
-  }
-  80% {
-    width: 100%;
-  }
-  90% {
-    width: 100%;
-  }
-  to {
-    width: 100%;
-    -webkit-transform: translateX(-100%);
-            transform: translateX(-100%);
-  }
-}
-
 @keyframes wave {
   from {
     width: 0%;
   }
   50% {
     width: 100%;
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
   60% {
     width: 100%;
@@ -335,8 +258,7 @@ body {
   }
   to {
     width: 100%;
-    -webkit-transform: translateX(-100%);
-            transform: translateX(-100%);
+    transform: translateX(-100%);
   }
 }
 /*# sourceMappingURL=index.css.map */
