--- a/js/components/footer/_style.scss
+++ b/js/components/footer/_style.scss
@@ -2,15 +2,16 @@
 	padding: 100px 0;
 	background-color: $whitish;
 	text-align: center;
-
 	&__title {
 		@include font("Poppins", 35px, 500);
 		margin: 0;
+		line-height: 40px;
+		color: #293341;
+	}
 	&__form {
 		position: relative;
-		width: 500px;
-		margin: auto;
-		margin: 40px auto 60px;
+		width: 700px;
+		margin: 40px auto 60px !important;
 		display: flex;
 	}
 	&__label {
@@ -72,6 +73,7 @@
 			}
 		}
 	}
+}
 
 @keyframes wave {
 	from {
@@ -96,7 +98,5 @@
 	to {
 		width: 100%;
 		transform: translateX(-100%);
-    }
-}
-    }
+	}
 }
