--- a/index.scss
+++ b/index.scss
@@ -1,8 +1,10 @@
 @import "./scss/base";
 @import "./scss/helpers/variables";
 @import "./scss/mixins/mixins";
+@import "./scss/helpers/classes";
 @import "./js/components/preloader/preloader";
 @import "./js/components/header/style/header";
 @import "./js/components/header/style/burgerMenu";
+@import "./js/components/footer/style"; 
 @import "./js/components/footer/style";
-    
+@import "./js/routes/decor/styles";
