--- a/index.scss
+++ b/index.scss
@@ -6,5 +6,4 @@
 @import "./js/components/header/style/header";
 @import "./js/components/header/style/burgerMenu";
 @import "./js/components/footer/style";
-@import './js/routes/decor/styles';
- 
+@import "./js/routes/decor/styles";
